# zksync-airbender-llzk

./: .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  deny.toml  flake.nix  prepare_proving.sh  recreate_verifiers.sh
circuit_defs/blake2_with_compression/: Cargo.toml
circuit_defs/blake2_with_compression/src/: lib.rs
circuit_defs/blake2_with_compression/verifier/: Cargo.toml
circuit_defs/keccak_special5/: Cargo.toml
circuit_defs/keccak_special5/src/: lib.rs
circuit_defs/keccak_special5/verifier/: Cargo.toml
circuit_defs/prover_examples/: Cargo.toml
circuit_defs/prover_examples/src/: lib.rs  unified.rs  unrolled.rs
circuit_defs/trace_and_split/: Cargo.toml
common_constants/: Cargo.toml
common_constants/src/: circuit_families.rs  lib.rs  timestamps.rs
common_constants/src/delegation_types/: keccak_special5.rs  mod.rs
common_constants/src/delegation_types/snapshots/: common_constants__delegation_types__keccak_special5__tests__keccak_f1600_riscv_codegen.snap
cs/: Cargo.toml  add_sub_lui_auipc_mop_preprocessed_layout.json  full_machine_with_delegation_without_signed_mul_div_ssa.json  inits_and_teardowns_preprocessed_layout.json  keccak_delegation_ssa.json  load_store_preprocessed_layout.json  load_store_preprocessed_ssa.json  mul_div_preprocessed_layout.json  mul_div_preprocessed_ssa.json  mul_div_unsigned_preprocessed_layout.json  reduced_machine_preprocessed_layout.json  reduced_machine_preprocessed_ssa.json  shift_binop_csrrw_preprocessed_layout.json  subword_only_load_store_preprocessed_layout.json
cs/src/: constraint.rs  csr_properties.rs  lib.rs  types.rs
cs/src/cs/: circuit.rs  cs_reference.rs  oracle.rs  placeholder.rs  spec_selection.rs  utils.rs
cs/src/cs/witness_placer/: cs_debug_evaluator.rs  mod.rs
cs/src/cs/witness_placer/graph_description/: boolean.rs  field.rs  integer.rs  mod.rs
cs/src/definitions/: columns.rs  constants.rs  constraints.rs  cycle_state.rs  decoding_utils.rs  delegation.rs  lookup.rs  memory_tree.rs  mod.rs  ram_access.rs  setup_tree.rs  stage2.rs  table_type.rs  unrolled_families.rs  witness_tree.rs
cs/src/delegation/: mod.rs
cs/src/delegation/bigint_with_control/: mod.rs
cs/src/delegation/blake2_round_with_extended_control/: mod.rs
cs/src/delegation/keccak_special5/: mod.rs
cs/src/devices/: diffs.rs  optimization_context.rs  risc_v_types.rs  utils.rs
cs/src/machine/: mod.rs  utils.rs
cs/src/machine/decoder/: decode_optimized_must_handle_csr.rs
cs/src/machine/machine_configurations/: mod.rs
cs/src/machine/machine_configurations/full_isa_with_delegation_no_exceptions/: mod.rs
cs/src/machine/machine_configurations/full_isa_with_delegation_no_exceptions_no_signed_mul_div/: mod.rs
cs/src/machine/machine_configurations/minimal_no_exceptions/: optimized_state_transition.rs
cs/src/machine/machine_configurations/minimal_no_exceptions_with_delegation/: mod.rs
cs/src/machine/machine_configurations/state_transition_parts/: decode_and_read_operands.rs  writeback_no_exceptions.rs
cs/src/machine/ops/: conditional.rs  mod.rs  mop.rs  mul_div.rs
cs/src/machine/ops/common_impls/: csr_with_delegation.rs
cs/src/machine/ops/unrolled/: add_sub_lui_auipc_mop.rs  inits_and_teardowns.rs  jump_branch_slt.rs  load_store.rs  load_store_subword_only.rs  load_store_word_only.rs  mod.rs  mul_div.rs  reduced_machine_ops.rs  shift_binary_csr.rs
cs/src/machine/ops/unrolled/decoder/: decoder_circuit.rs  decoder_table.md  mod.rs  mul_div.rs  reduced_machine_ops.rs
cs/src/one_row_compiler/: bytecode_preprocessed_executor.rs  compile_init_and_teardown_circuit.rs  compile_layout.rs  decoder_compilation.rs  executor_compilation.rs  layout_utils.rs  mod.rs
cs/src/tables/: binops.rs  branch_opcode_related.rs  jump_opcode_related.rs  keccak_precompile_related.rs  memory_opcode_related.rs  mod.rs  range_checks_and_decompositions.rs  rom_related.rs  zero_entry.rs
execution_utils/: Cargo.toml
fft/: Cargo.toml
full_statement_verifier/: Cargo.toml  README.md
gpu_prover/: Cargo.toml
gpu_prover_test/: Cargo.toml
gpu_witness_eval_generator/: Cargo.toml
llzk_backend/: .rustfmt.toml  AGENTS.md  Cargo.toml
llzk_backend/src/: builder.rs  codegen.rs  config.rs  constraints.rs  field.rs  keccak_tables.rs  lib.rs  lookups.rs  main.rs  output_format.rs  recipes.rs  test_helpers.rs  witness.rs
llzk_backend/testdata/constraints/: boolean_not_on_input_emits_sub_from_one.mlir  constrain_access_reads_member_when_variable_is_not_input.mlir  lookup_expression_emits_mul_and_add_chain.mlir  negative_constant_term_emits_negated_small_constant.mlir  range_check_query_emits_compare_and_constraint.mlir  term_with_negative_unit_coefficient_emits_neg.mlir
llzk_backend/testdata/lookups/: aligned_rom_read_lookup_is_range_only.mlir  conditional_jump_lookup_emits_one_hot_logic.mlir  conditional_op_all_conditions_lookup_resolves_branch_and_store.mlir  disjunctive_lookup_uses_conditional_constraints_for_unsafe_tables.mlir  disjunctive_lookup_uses_row_multiplier_for_safe_tables.mlir  dynamic_lookup_dispatches_bitwise_tables.mlir  extend_loaded_value_lookup_emits_extension_logic.mlir  jump_cleanup_lookup_emits_alignment_constraints.mlir  logical_shift_low_lookup_emits_shifted_limbs.mlir  mem_store_clear_written_lookup_is_range_only.mlir  memory_get_offset_and_mask_lookup_is_range_only.mlir  rom_address_space_separator_lookup_emits_rom_bound_relation.mlir  shift_implementation_lookup_splits_shifted_result.mlir  special_csr_properties_lookup_uses_metadata.mlir  sra_16_bit_input_sign_fill_lookup_emits_sign_mask.mlir  sra_sign_filler_lookup_emits_sign_mask.mlir  store_byte_existing_contribution_lookup_masks_selected_half.mlir  store_byte_source_contribution_lookup_shifts_selected_byte.mlir  truncate_shift_amount_lookup_reconstructs_input.mlir
picus/: Cargo.toml  lib.rs
picus_frontend/: Cargo.toml  README.md
picus_frontend/src/: lib.rs  lookups.rs
prover/: add_sub_lui_auipc_mop_unrolled_proof.json  k_delegation_proof  keccak_delegator_proof  (+6 more)
tools/cli/: Cargo.toml  README.md
tools/cli/src/: lib.rs  main.rs  prover_utils.rs
(+227 files in other folders)
