[package]
name = "common_constants"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[target.'cfg(target_arch = "riscv32")'.dependencies]
seq-macro = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
