[package]
name = "cs"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
field.workspace = true
serde.workspace = true
blake2s_u32 = { workspace = true, optional = true }
fft = { workspace = true, optional = true }
common_constants = { workspace = true }
itertools = { workspace = true, optional = true }
derivative = { version = "2", optional = true }
smallvec = {version = "1.13", features = ["const_generics", "const_new", "serde"], optional = true }
proc-macro2 = {version = "1", optional = true }
quote = {version = "1", optional = true }
seq-macro = { workspace = true, optional = true }
serde_json = { version = "*", optional = true }
bincode = { version = "1.3", optional = true }
rayon =  { version = "1", optional = true }
type-map = { version = "0.5", optional = true }

[dev-dependencies]
test_utils = { workspace = true }
disc-v = {git = "https://github.com/oxidecomputer/disc-v.git"}
rand = { workspace = true, features = ["std", "thread_rng", "std_rng"]}
serial_test = "3"

[features]
definitions_only = []
compiler = ["blake2s_u32", "fft", "itertools", "derivative", "smallvec", "proc-macro2", "quote", "seq-macro", "serde_json", "bincode", "rayon", "type-map"]
# Will perform witness evaluation in synthesis functions
debug_evaluate_witness = []
# When enabled, the crate will print detailed debug logs.
debug_logs = []
experimental_witness_eval = []
# Enables Picus/LLZK extraction support (structured-constraint recording, translation
# circuit variants, and the less-optimized "protected constraints" compilation). OFF by
# default so the compiled proving circuits are unchanged; only the picus_frontend / llzk
# backends turn it on.
picus = []

default = ["compiler"]
# default = ["compiler", "experimental_witness_eval"]
