[package]
name = "llzk_backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true }
prover = { workspace = true, features = ["prover"] }
llzk = { git = "https://github.com/project-llzk/llzk-rs", package = "llzk", features = ["pcl-backend"] }
# Deps for unrolled circuits
add_sub_lui_auipc_mop = { path = "../circuit_defs/unrolled_circuits/add_sub_lui_auipc_mop" }
jump_branch_slt = { path = "../circuit_defs/unrolled_circuits/jump_branch_slt"}
load_store_subword_only = { path = "../circuit_defs/unrolled_circuits/load_store_subword_only" }
load_store_word_only = { path = "../circuit_defs/unrolled_circuits/load_store_word_only" }
mul_div = { path = "../circuit_defs/unrolled_circuits/mul_div" }
shift_binary_csr = { path = "../circuit_defs/unrolled_circuits/shift_binary_csr" }
unified_reduced_machine = { path = "../circuit_defs/unrolled_circuits/unified_reduced_machine" }
picus_frontend = { path = "../picus_frontend" }

env_logger = "0.11"
base64 = "0.21.7"
anyhow = "1.0.102"
melior = "=0.25.1"
mlir-sys = "0.5.0"
serde_json = "1.0"
