[package]
name = "picus_frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
common_constants.workspace = true
cs = { workspace = true, features = ["compiler", "picus"] }
field.workspace = true
picus.workspace = true
