[package]
name = "blake2_with_compression"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prover = { workspace = true, features = ["prover"] }
verifier_generator = { workspace = true }
common_constants = { workspace = true }
serde = { workspace = true }
serde_json = "*"

[features]

[dev-dependencies]
test_utils = { workspace = true }
