[package]
name = "keccak_special5"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prover = { workspace = true, features = ["prover"] }
verifier_generator = { workspace = true }
serde = { workspace = true }
common_constants = { workspace = true }
serde_json = "*"

[features]

[dev-dependencies]
test_utils = { workspace = true }
